# agent-testing

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTINUATION.md  Dockerfile.coordinator  Dockerfile.dataset-builder  Dockerfile.worker  Makefile  README.md  experiment_gaps.md  plan_subagents_pydantic_ai.md  potential_expansions.md  pyproject.toml  user_stories.md
.github/workflows/: ci.yml  e2e-live.yml
config/: concurrency.yaml  coordinator.yaml  experiments.yaml  models.yaml  pricing.yaml  retry.yaml  review_profiles.yaml  vuln_classes.yaml
frontend/: index.html  node_modules  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: a11y-keyboard.spec.ts  accuracy-heatmap.spec.ts  amber-primary.spec.ts  batch-detail-interactions.spec.ts  batch-detail.spec.ts  batch-new-interactions.spec.ts  batch-new.spec.ts  benchmark-archive-origin.spec.ts  benchmark-datasets-listing.spec.ts  benchmark-scorecard.spec.ts  conversation-viewer.spec.ts  cost-estimate.spec.ts  cve-discovery-extended.spec.ts  cve-discovery-import-errors.spec.ts  cve-discovery-interactions.spec.ts  cve-discovery-patch-size-validation.spec.ts  cve-discovery.spec.ts  cve-to-findings.spec.ts  dashboard-cost-headroom.spec.ts  dashboard-extended.spec.ts  dashboard-interactions.spec.ts  dashboard-polling.spec.ts  dashboard-recent-failed-runs.spec.ts  dashboard-smoke-test-failure.spec.ts  dashboard-trends.spec.ts  dashboard.spec.ts  dataset-detail-filetree.spec.ts  dataset-detail-interactions.spec.ts  dataset-detail.spec.ts  dataset-inject-errors.spec.ts  dataset-inject.spec.ts  dataset-materialize.spec.ts  dataset-origin-card.spec.ts  dataset-source-view-extended.spec.ts  dataset-source-view.spec.ts  datasets-interactions.spec.ts  datasets.spec.ts  error-states-uncovered-flows.spec.ts  experiment-cancel.spec.ts  experiment-detail-cancel-error.spec.ts  (+66 more)
frontend/e2e/fixtures/: accuracy-matrix.json  batch-results.json  batches.json  comparison.json  cve-candidates.json  datasets.json  experiment-results-with-failures.json  experiment-results.json  experiments.json  file-tree.json  findings.json  fp-patterns.json  labels.json  run-full-failed.json  run-full.json  runs.json  templates.json  trends.json
frontend/e2e/flows/: cve-to-findings.spec.ts
frontend/e2e/helpers/: liveMode.ts  mockApi.ts  mockStrategiesRoutes.ts  sequencedMock.test.ts  sequencedMock.ts
frontend/scripts/: capture-screenshots.mjs
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts  strategies.ts
helm/sec-review/: .helmignore  Chart.yaml  README.md  grafana-dashboard.json  values-e2e.yaml  values-minikube.yaml  values-prod.yaml  values.yaml
k8s/: coordinator-deployment.yaml  coordinator-service.yaml  fluentd-config.yaml  gatekeeper-constraint.yaml  namespace.yaml  network-policy-dataset-builder.yaml  network-policy.yaml  rbac.yaml  secrets.yaml  servicemonitor.yaml  shared-pvc.yaml
scripts/: backfill_findings_index.py  export_experiment.py  import_experiment.py
scripts/e2e-live/: bootstrap.sh  port-forward.sh  seed-dataset.sh  teardown.sh
scripts/spike_pydantic_ai/: SPIKE_RESULTS.md  demo.py  litellm_model.py  test_spike.py
src/sec_review_framework/: bundle.py  config.py  coordinator.py  db.py  llm_providers.py  worker.py
tests/: conftest.py  helpers.py
tests/api/: test_strategies_api.py
tests/e2e/: test_api_surface.py  test_concurrency_and_caps.py  test_coordinator_smoke.py  test_dataset_injection.py  test_live_benchmark_run.py  test_live_endpoint_probe.py  test_live_smoke.py  test_live_with_tools_run.py  test_llm_providers_api.py  test_offline_smoke.py  test_tool_extensions.py
tests/fixtures/: fake_mcp_server.py  provider_snapshots.py
tests/infra/: test_configmap_template.py  test_devdocs_emptydir_fallback.py  test_docker_build.py  test_k8s_manifests.py
tests/integration/: test_accuracy_matrix.py  test_batch_routes_extended.py  test_benchmark_coordinator_integration.py  test_benchmark_importers_contract.py  test_benchmark_scoring_integration.py  test_config_matrix_routes.py  test_coordinator_api.py  test_cross_experiment_api.py  test_cve_discovery_routes.py  test_dataset_creation.py  test_dataset_round_trip.py  test_dataset_routes.py  test_datasets_extra_api.py  test_devdocs_extension.py  test_enrich_model_configs.py  test_experiment_bundle.py  test_experiment_lifecycle_api.py  test_experiment_routes_extended.py  test_full_run.py  test_language_allowlist_endpoint.py  test_lsp_extension.py  test_models_api.py  test_paired_polarity_scorecard.py  test_per_test_file_iteration_endpoint.py  test_probe_driven_runs.py  test_prompt_snapshot.py  test_single_agent_strategy.py  test_smoke_feedback_run_routes.py  test_submit_rejects_unavailable.py  test_tree_sitter_extension.py  test_worker_pipeline.py
tests/performance/: test_evaluator_performance.py
tests/unit/: test_agent_litellm_model.py  test_agent_output_types.py  test_agent_subagent.py  test_agent_tool_adapter.py  test_agentic_loop.py  test_archive_materializer.py  test_availability.py  test_backfill_findings.py  test_bandit_functional_importer.py  test_batch_cost_tracker.py  test_bedrock_probe.py  test_benchmark_java_importer.py  test_benchmark_python_importer.py  test_benchmark_scoring.py  test_big_vul_importer.py  test_bundle_snapshot.py  test_codeql_test_suites_importer.py  test_common_bundle.py  test_compare_runs_cross_experiment.py  test_config.py  test_coordinator_cve_injection.py  test_coordinator_findings_search.py  test_coordinator_lifespan.py  test_cost_calculator.py  test_crossvul_importer.py  test_cve_importer.py  test_cvefixes_importer.py  test_data_models.py  test_database.py  test_database_datasets.py  test_db_findings_index.py  test_db_upload_tokens_concurrency.py  test_db_user_strategies.py  test_deduplication.py  test_devdocs_ext.py  test_devdocs_server.py  test_devdocs_sync.py  test_diff_generator.py  test_diff_review_strategy.py  test_effective_registry.py  (+72 more)
(+282 files in other folders)
