[project]
name = "sec-review-framework"
version = "0.1.0"
description = "AI/LLM Security Code Review Testing Framework"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "litellm>=1.60",
    "httpx>=0.28",
    "numpy>=2.2",
    "scipy>=1.15",
    "boto3>=1.42.93",
]

[project.optional-dependencies]
coordinator = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "kubernetes>=32.0",
    "prometheus-client>=0.22",
    "aiosqlite>=0.21",
    "python-multipart>=0.0.18",
    "cryptography>=42.0",
]
worker = [
    # semgrep is NOT a Python dependency — it is invoked as an external binary
    # via subprocess.  Install the semgrep binary separately (e.g. via the SAST
    # runtime sidecar) and ensure it is available on PATH at runtime.
    "mcp>=1.25",
    # Tree-sitter extension (ToolExtension.TREE_SITTER)
    # tree-sitter>=0.25 uses the new binding API (Language.query, etc.)
    "tree-sitter>=0.25.2",
    # Single-package grammar bundle: 305 pre-compiled parsers, on-demand download.
    # Covers all security-review target languages: python, javascript, typescript,
    # tsx, go, java, ruby, rust, c, cpp, php, bash, yaml, json, hcl, dockerfile, sql.
    # Pin to <1.6.3 until that release ships Linux/Windows wheels.
    "tree-sitter-language-pack>=1.6.0,<1.6.3",
]
agent = [
    # pydantic-ai is used by agent-mode harnesses (coordinator-side).
    # mcp>=1.25 is compatible with both worker and agent extras.
    "pydantic-ai>=1.87,<2.0",
    "mcp>=1.25",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]
# Phase 0 spike: pydantic-ai integration validation.
# NOTE: pydantic-ai-slim 1.87+ is incompatible with the worker extra due to
# two conflicts: (1) pydantic-ai requires opentelemetry-api>=1.28 while
# semgrep 1.100-1.145 requires otel<1.26; (2) pydantic-ai requires mcp>=1.25.0
# while no released semgrep version satisfies that bound (semgrep 1.100-1.145
# requires mcp==1.16.0; semgrep>=1.146 requires mcp==1.23.3).
# Resolution: use a separate venv (no worker extra) for the agent runner.
# Install separately with: uv pip install "pydantic-ai>=1.87,<2.0"
spike = [
    "pydantic-ai>=1.87,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_review_framework"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires temp database or mock services",
    "infra: requires Docker or K8s tools",
    "k8s_live: requires a live Kubernetes cluster via scripts/e2e-live/bootstrap.sh",
]
# aiosqlite 0.22.1 race: its _connection_worker_thread signals completion via
# call_soon_threadsafe, which raises "Event loop is closed" when the starlette
# TestClient's portal loop is torn down between the last request and fixture
# teardown. Pytest surfaces this as PytestUnhandledThreadExceptionWarning. The
# product code is fine — the noise is test-infrastructure only — so we filter
# the specific worker-thread trace.
filterwarnings = [
    "ignore:Exception in thread Thread-\\d+ \\(_connection_worker_thread\\):pytest.PytestUnhandledThreadExceptionWarning",
]

[dependency-groups]
dev = [
    "mcp>=1.25",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
]
