[project]
name = "sec-review-framework"
version = "0.1.0"
description = "AI/LLM Security Code Review Testing Framework"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "litellm>=1.60",
    "httpx>=0.28",
    "numpy>=2.2",
    "scipy>=1.15",
    "boto3>=1.42.93",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
coordinator = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "kubernetes>=32.0",
    "prometheus-client>=0.22",
    "aiosqlite>=0.21",
    "python-multipart>=0.0.18",
    "cryptography>=42.0",
]
worker = [
    # semgrep is intentionally absent: its mcp<2 pin conflicts with pydantic-ai's
    # mcp>=1 requirement. The binary is provisioned in the worker image via pipx
    # (see Dockerfile.worker ARG SEMGREP_VERSION); the Python package is excluded
    # from this venv.
    "mcp>=1.25",
    # Tree-sitter extension (ToolExtension.TREE_SITTER)
    # tree-sitter>=0.25 uses the new binding API (Language.query, etc.)
    "tree-sitter>=0.25.2",
    # Single-package grammar bundle: 305 pre-compiled parsers, on-demand download.
    # Covers all security-review target languages: python, javascript, typescript,
    # tsx, go, java, ruby, rust, c, cpp, php, bash, yaml, json, hcl, dockerfile, sql.
    # Pin to <1.6.3 until that release ships Linux/Windows wheels.
    "tree-sitter-language-pack>=1.6.0,<1.6.3",
]
agent = [
    # pydantic-ai backs the unified strategy runner; required in worker images.
    "pydantic-ai>=1.87,<2.0",
    "mcp>=1.25",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_review_framework"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=sec_review_framework --cov-report=term-missing --cov-fail-under=73"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires temp database or mock services",
    "infra: requires Docker or K8s tools",
    "k8s_live: requires a live Kubernetes cluster via scripts/e2e-live/bootstrap.sh",
]
# aiosqlite 0.22.1 race: its _connection_worker_thread signals completion via
# call_soon_threadsafe, which raises "Event loop is closed" when the starlette
# TestClient's portal loop is torn down between the last request and fixture
# teardown. Pytest surfaces this as PytestUnhandledThreadExceptionWarning. The
# product code is fine — the noise is test-infrastructure only — so we filter
# the specific worker-thread trace.
filterwarnings = [
    "ignore:Exception in thread Thread-\\d+ \\(_connection_worker_thread\\):pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["sec_review_framework"]
branch = true
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 73
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "mcp>=1.25",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
]
